[package]
name = "leetcode_rust"
version = "0.2.5"
edition = "2021"
authors = ["Zhongdong Yang <zhongdong_y@outlook.com>"]
categories = ["problems", "algorithm"]
keywords = ["leetcode"]
description = "Personal solutions to LeetCode problems using Rust language"
repository = "https://github.com/zhongdongy/leetcode_rust"

[dev-dependencies]
criterion = "0.4"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "leetcode_rust"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
