[package]
name = "leetcode-in-rust"
version = "0.2.10"
edition = "2021"
authors = ["Zhongdong Yang <zhongdong_y@outlook.com>"]
categories = ["problems", "algorithm"]
keywords = ["leetcode"]
license = "Apache-2.0"
description = "Personal solutions to LeetCode problems using Rust language"
repository = "https://github.com/zhongdongy/leetcode_rust"
homepage = "https://leetcode-rust.dongs.xyz/"
include = ["/src", "/tests", "/extra", "/benches"]

[dev-dependencies]
criterion = "0.4"

[lib]
crate-type = ["rlib"]
name = "leetcode_rust"

[[bin]]
name = "leetcode_rust"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
